kubernetes/services/www/terah.dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: www-terah-dev
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: www-terah-dev
